2009-07-45 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Adjusted path to l10nmgr tools in CLI cleaner
	* Added substitution of <hr> to <hr /> in RTE2XML transformation and the other way around in XML2RTE

2009-06-22 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Changed field definition for tablelist in table tx_l10nmgr_cfg to accomodate more tables to export
	
2009-05-13 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Changed XML2RTE for CLI import (substitute url in <link) [models/tools/class.l10nmgr.xmltools.php]
	
2009-03-30 Daniel Zielinski <d.zielinski@l10ntech.de>
	* CLI import file XML or ZIP (local file) TODO: If http:// or ftp://...
	* Unzip file (not Win compatible)
	* Generate preview link via CLI if t3_previewId present takes precendemce over first pageGrp id
	* New calls for cli import script: modes 1 = import string, 2 = import file, 3 = source preview.
	* Example: cli.import.php MODE PREVIEW XML FILEPATH SERVERLINK
	* Preview param is now passed as additional argument
	* Revision 3.3.2

2009-02-03 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Bug fix in preview link generation service

2009-02-02 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added email notification to CLI export (with/without attachment)
	* Added dependency static_info_tables
	* Revision 3.3.0 now

2009-02-02 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Merged last changes from trunk into v3

2009-01-30 Kasper Skarhoj
	* Added "recUid" to sorting in translation task index list.

2009-01-30 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added settings file for MemoQ
	* Revision 3.2.2 now

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Revision 3.2.1 now
	* Removed naming annoyances

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Merged changes from Kasper from trunk to v3 ;-)

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>
	* Added option to enable/disable FTP upload via extension configuration

2009-01-28 Daniel Zielinski <d.zielinski@l10ntech.de>