@@ -120,8 +120,7 @@ class tx_cliimport_cli extends t3lib_cli {
 	$service=t3lib_div::makeInstance('tx_l10nmgr_l10nBaseService');
 	$factory=t3lib_div::makeInstance('tx_l10nmgr_translationDataFactory');
 
-	$importManagerClass=t3lib_div::makeInstanceClassName('tx_l10nmgr_CATXMLImportManager');
-	$importManager=new $importManagerClass($uploadedTempFile,$this->sysLanguage,$xml);
+	$importManager=t3lib_div::makeInstance('tx_l10nmgr_CATXMLImportManager',$uploadedTempFile,$this->sysLanguage,$xml);
 
 	//Parse and check XML, load header data
 	if ($importManager->parseAndCheckXMLString()===false) {
@@ -158,8 +157,7 @@ class tx_cliimport_cli extends t3lib_cli {
 			} else {
 				$pageIds[0]=$importManager->headerData['t3_previewId'];
 			}
-			$mkPreviewLinksClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_mkPreviewLinkService');
-			$mkPreviewLinks=new $mkPreviewLinksClassName($t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
+			$mkPreviewLinks=t3lib_div::makeInstance('tx_l10nmgr_mkPreviewLinkService',$t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
 			$previewLink=$mkPreviewLinks->mkSinglePreviewLink($importManager->headerData['t3_baseURL'],$serverlink);
 			$out.= $previewLink;
 		}
@@ -199,8 +197,7 @@ class tx_cliimport_cli extends t3lib_cli {
 	$service=t3lib_div::makeInstance('tx_l10nmgr_l10nBaseService');
 	$factory=t3lib_div::makeInstance('tx_l10nmgr_translationDataFactory');
 
-	$importManagerClass=t3lib_div::makeInstanceClassName('tx_l10nmgr_CATXMLImportManager');
-	$importManager=new $importManagerClass($uploadedTempFile,$this->sysLanguage,$xml);
+	$importManager=t3lib_div::makeInstance('tx_l10nmgr_CATXMLImportManager',$uploadedTempFile,$this->sysLanguage,$xml);
 
 	//Parse and check XML, load header data
 	if ($importManager->parseAndCheckXMLString()===false) {
@@ -211,8 +208,7 @@ class tx_cliimport_cli extends t3lib_cli {
     		$this->cli_echo($error);
         } else {
 		$pageIds = $importManager->getPidsFromCATXMLNodes($importManager->xmlNodes);
-		$mkPreviewLinksClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_mkPreviewLinkService');
-		$mkPreviewLinks=new $mkPreviewLinksClassName($t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
+		$mkPreviewLinks=t3lib_div::makeInstance('tx_l10nmgr_mkPreviewLinkService',$t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
 		//Only valid if source language = default language (id=0)
 		$previewLink=$mkPreviewLinks->mkSingleSrcPreviewLink($importManager->headerData['t3_baseURL'],$srcLang=0);
 		$out.= $previewLink;
@@ -255,8 +251,7 @@ class tx_cliimport_cli extends t3lib_cli {
 		$factory=t3lib_div::makeInstance('tx_l10nmgr_translationDataFactory');
 
 		// Relevant processing of XML Import with the help of the Importmanager
-		$importManagerClass=t3lib_div::makeInstanceClassName('tx_l10nmgr_CATXMLImportManager');
-		$importManager=new $importManagerClass($xmlFile,$this->sysLanguage,$xml);
+		$importManager=t3lib_div::makeInstance('tx_l10nmgr_CATXMLImportManager',$xmlFile,$this->sysLanguage,$xml);
 		if ($importManager->parseAndCheckXMLFile()===false) {
 			$out.='<br/><br/>'.$importManager->getErrorMessages();
 		} else {
@@ -279,8 +274,7 @@ class tx_cliimport_cli extends t3lib_cli {
 				} else {
 					$pageIds[0]=$importManager->headerData['t3_previewId'];
 				}
-				$mkPreviewLinksClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_mkPreviewLinkService');
-				$mkPreviewLinks=new $mkPreviewLinksClassName($t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
+				$mkPreviewLinks=t3lib_div::makeInstance('tx_l10nmgr_mkPreviewLinkService',$t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
 				$previewLink=$mkPreviewLinks->mkSinglePreviewLink($importManager->headerData['t3_baseURL'],$serverlink);
 				$out.= $previewLink;
 			}
