@@ -177,8 +177,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 				$this->content.=$this->doc->header($LANG->getLL('general.title'));
 
 				//create and render view to show details for the current l10nmgrcfg
-				$l10nmgrconfigurationViewClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_l10ncfgDetailView');
-				$l10nmgrconfigurationView= new $l10nmgrconfigurationViewClassName($l10ncfgObj, $this->doc);
+				$l10nmgrconfigurationView= t3lib_div::makeInstance('tx_l10nmgr_l10ncfgDetailView',$l10ncfgObj, $this->doc);
 				$this->content.=$this->doc->section('',$l10nmgrconfigurationView->render());
 
 				$this->content.=$this->doc->divider(15);
@@ -338,8 +337,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 			}
 			else {
 				// Relevant processing of XML Import with the help of the Importmanager
-				$importManagerClass=t3lib_div::makeInstanceClassName('tx_l10nmgr_CATXMLImportManager');
-				$importManager=new $importManagerClass($uploadedTempFile,$this->sysLanguage, $xmlString="");
+				$importManager=t3lib_div::makeInstance('tx_l10nmgr_CATXMLImportManager',$uploadedTempFile,$this->sysLanguage, $xmlString="");
 				if ($importManager->parseAndCheckXMLFile()===false) {
 					$info.='<br/><br/>'.$this->doc->header($LANG->getLL('import.error.title')).$importManager->getErrorMessages();
 				}
@@ -352,8 +350,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 					if (t3lib_div::_POST('make_preview_link')=='1') {
 						$pageIds = $importManager->getPidsFromCATXMLNodes($importManager->xmlNodes);
 						$info.='<b>'.$LANG->getLL('import.xml.preview_links.title').'</b><br/>';
-						$mkPreviewLinksClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_mkPreviewLinkService');
-						$mkPreviewLinks=new $mkPreviewLinksClassName($t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
+						$mkPreviewLinks=t3lib_div::makeInstance('tx_l10nmgr_mkPreviewLinkService',$t3_workspaceId=$importManager->headerData['t3_workspaceId'], $t3_sysLang=$importManager->headerData['t3_sysLang'], $pageIds);
 						$info.=$mkPreviewLinks->renderPreviewLinks($mkPreviewLinks->mkPreviewLinks());
 					}
 					$translationData=$factory->getTranslationDataFromCATXMLNodes($importManager->getXMLNodes());
@@ -372,8 +369,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 			$BE_USER->pushModuleData('l10nmgr/cm1/checkUTF8',t3lib_div::_POST('check_utf8'));
 
 			// Render the XML
-			$viewClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_CATXMLView');
-			$viewClass=new $viewClassName($l10ncfgObj,$this->sysLanguage);
+			$viewClass=t3lib_div::makeInstance('tx_l10nmgr_CATXMLView',$l10ncfgObj,$this->sysLanguage);
 			$export_xml_forcepreviewlanguage=intval(t3lib_div::_POST('export_xml_forcepreviewlanguage'));
 			if ($export_xml_forcepreviewlanguage > 0) {
 				$viewClass->setForcedSourceLanguage($export_xml_forcepreviewlanguage);
@@ -428,8 +424,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 		if (t3lib_div::_POST('export_excel')) {
 
 			// Render the XML
-			$viewClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_excelXMLView');
-			$viewClass=new $viewClassName($l10ncfgObj,$this->sysLanguage);
+			$viewClass=t3lib_div::makeInstance('tx_l10nmgr_excelXMLView',$l10ncfgObj,$this->sysLanguage);
 
 			//Check the export
 			if ((t3lib_div::_POST('check_exports')=='1') && ($viewClass->checkExports() == FALSE)) {
@@ -455,8 +450,7 @@ class tx_l10nmgr_cm1 extends t3lib_SCbase {
 
 		switch ($this->MOD_SETTINGS["action"]) {
 			case 'inlineEdit': case 'link':
-				$htmlListViewClassName=t3lib_div::makeInstanceClassName('tx_l10nmgr_l10nHTMLListView');
-				$htmlListView=new $htmlListViewClassName($l10ncfgObj,$this->sysLanguage);
+				$htmlListView=t3lib_div::makeInstance('tx_l10nmgr_l10nHTMLListView',$l10ncfgObj,$this->sysLanguage);
 				$subheader=$LANG->getLL('inlineEdit');
 
 				if ($this->MOD_SETTINGS["action"]=='inlineEdit') {
