@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Module for managing localization import and export',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '3.3.2',
+	'version' => '3.3.4-dev',
 	'dependencies' => 'static_info_tables',
 	'conflicts' => '',
 	'priority' => '',
