@@ -119,6 +119,7 @@ class tx_l10nmgr_CATXMLView extends tx_l10nmgr_abstractExportView{
 										else {
 											//Substitute & with &amp; in non-RTE fields
 											$dataForTranslation=str_replace('&','&amp;',$dataForTranslation);
+											$dataForTranslation=str_replace('< ','&lt;',$dataForTranslation);
 											//$dataForTranslation = t3lib_div::deHSCentities($dataForTranslation);
 
 											$params = $BE_USER->getModuleData('l10nmgr/cm1/prefs', 'prefs');
