@@ -1,3 +1,10 @@
+2010-07-25 Andreas Otto <a.otto@sma.de>
+	* Bugfix #7466: L10N Manager fills the deprecation_log
+
+2010-07-13 Andreas Otto <a.otto@sma.de>
+	* Bugfix #8831: CLI export module help text is never displayed
+	* Bugfix #8832: Method extractFile in class tx_l10nmgr_zip is not using TYPO3 API to create a directory
+
 2009-07-45 Daniel Zielinski <d.zielinski@l10ntech.de>
 	* Adjusted path to l10nmgr tools in CLI cleaner
 	* Added substitution of <hr> to <hr /> in RTE2XML transformation and the other way around in XML2RTE
